avg coding exp